# bookstore

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  log.txt  pyproject.toml  requirements.txt  structure.txt
.github/workflows/: build.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: __init__.py
order/tests/test_serializers/: __init__.py  test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_tutle_product_title.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: __init__.py
product/tests/test_serializers/: __init__.py  test_category_serializer.py  test_product__serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
