[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["pedrosimiao <pedrolumiere@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"
whitenoise = "^6.9.0"
gunicorn = "^23.0.0"
gitpython = "^3.1.44"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
factory-boy = "^3.3.1"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
